--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Mon Site Pro</title>
     <link rel="stylesheet" href="EB 1 .css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KK9XGC5DLT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KK9XGC5DLT');
+</script>
+    
 <body>
 
     <header>
@@ -27,3 +38,4 @@
     <script src="EB 1.js"></script>
 </body>
 </html>
+
